--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -11,11 +11,12 @@ Lee Juyeon;
 = 광고 회사 통계 데이터 REST API
 
 
-
 [[index]]
 == 개요
 
-The index provides the entry point into the service.
+통계 데이터 조회와 업로드를 할 수 있는 REST API 입니다.
+
+이를 활용하여 광고 플랫폼은 날짜와 시각 별로 광고 요청 수, 응답 수, 클릭 수를 수집하고 집계하여 통계 데이터로 생성내고 이를 토대로 효율 향상을 재고할 수 있습니다.
 
 
 [[search]]
@@ -43,9 +44,9 @@ include::{snippets}/search-by-date/http-response.adoc[]
 
 include::{snippets}/search-by-date/curl-request.adoc[]
 
-==== 파라미터
+==== 요청 파라미터
 
-include::{snippets}/search-by-date/path-parameters.adoc[]
+include::{snippets}/search-by-date/request-parameters.adoc[]
 
 ==== 응답 상세 정보
 
@@ -56,7 +57,7 @@ include::{snippets}/search-by-date/response-fields.adoc[]
 
 `GET` 요청을 `date`, `time` 파라미터와 함께 보냅니다.
 JSON 형식의 응답을 받게됩니다.
-응답은 해당 날짜의 요청 수, 응답 수, 클릭 수 합계인 `request` , `response` , `click`으로 이루어져 있습니다.
+응답은 해당 날짜의 요청 수, 응답 수, 클릭 수 합계인 `request` , `response` , `click` 으로 이루어져 있습니다.
 
 ==== Request structure
 
@@ -70,16 +71,19 @@ include::{snippets}/search-by-date-and-time/http-response.adoc[]
 
 include::{snippets}/search-by-date-and-time/curl-request.adoc[]
 
-==== 파라미터
+==== 요청 파라미터
 
-include::{snippets}/search-by-date-and-time/path-parameters.adoc[]
+include::{snippets}/search-by-date-and-time/request-parameters.adoc[]
 
 ==== 응답 상세 정보
 
 include::{snippets}/search-by-date-and-time/response-fields.adoc[]
 
+[[upload]]
+== 통계 데이터 업로드
+
 [[upload-data]]
-=== 통계 데이터 업로드
+=== 업로드 요청하기
 
 -	날짜, 시각, 요청 수, 응답 수, 클릭 수 정보를 담고 있는 JSON 형식으로 업로드
 -   업로드 결과(success, error) return
